--- a/.github/workflows/deploy-build-testing.yml
+++ b/.github/workflows/deploy-build-testing.yml
@@ -1,9 +1,9 @@
 name: deploy-build-testing
 
-on:
-  pull_request:
-  schedule:
-    - cron:  '0 0 * * *'
+# on:
+#   pull_request:
+#   schedule:
+#     - cron:  '0 0 * * *'
 
 jobs:
   docker-build:
